# meatballs-live-services-rust

./: Cargo.toml  build.rs
proto/: new_stories.proto
proto/v1/: services.proto
src/: client.rs  main.rs  server.rs
src/services/: mod.rs  new_stories.rs
src/services/generate/: collections.rs
src/services/ingest/: mod.rs  new_stories.rs  story_activity.rs
